--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,25 +5,47 @@
     app:startDestination="@id/initializingFragment">
 
     <fragment
-        android:id="@+id/signInFragment2"
+        android:id="@+id/initializingFragment"
+        android:name="com.a1danz.feature_initialize.presentation.screens.initialize.InitializingFragment"
+        android:label="InitializingFragment" >
+        <action
+            android:id="@+id/action_initializingFragment_to_signInFragment"
+            app:destination="@id/signInFragment"
+            app:popUpTo="@id/initializingFragment"
+            app:popUpToInclusive="true"
+            app:launchSingleTop="true"  />
+        <action
+            android:id="@+id/action_initializingFragment_to_createPostFragment"
+            app:destination="@id/createPostFragment"
+            app:popUpTo="@id/initializingFragment"
+            app:popUpToInclusive="true"
+            app:launchSingleTop="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/signInFragment"
         android:name="com.a1danz.feature_authorization.presentation.screens.signin.SignInFragment"
         android:label="SignInFragment" >
         <action
-            android:id="@+id/action_signInFragment2_to_signUpFragment"
-            app:destination="@id/signUpFragment"
-            app:popUpTo="@id/signUpFragment"
-            app:popUpToInclusive="true"/>
+            android:id="@+id/action_signInFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
     </fragment>
+
+
     <fragment
         android:id="@+id/signUpFragment"
         android:name="com.a1danz.feature_authorization.presentation.screens.signup.SignUpFragment"
         android:label="SignUpFragment">
         <action
-            android:id="@+id/action_signUpFragment_to_signInFragment2"
-            app:destination="@id/signInFragment2"
-            app:popUpTo="@id/signInFragment2"
-            app:popUpToInclusive="true"/>
+            android:id="@+id/action_signUpFragment_to_signInFragment"
+            app:destination="@id/signInFragment" />
     </fragment>
+
+    <fragment
+        android:id="@id/createPostFragment"
+        android:name="com.a1danz.feature_create_post.presentation.CreatePostFragment"
+        android:label="CreatePostFragment" />
+
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.a1danz.feature_settings.presentation.screens.main.SettingsFragment"
@@ -39,6 +61,7 @@
             android:id="@+id/action_settingsFragment_to_aboutFragment"
             app:destination="@id/aboutFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/socialMediaSettingsFragment"
         android:name="com.a1danz.feature_settings.presentation.screens.social_media.SocialMediaSettingsFragment"
@@ -58,35 +81,22 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
     </fragment>
-    <fragment
-        android:id="@+id/initializingFragment"
-        android:name="com.a1danz.feature_initialize.presentation.screens.initialize.InitializingFragment"
-        android:label="InitializingFragment" >
-        <action
-            android:id="@+id/action_initializingFragment_to_signInFragment2"
-            app:destination="@id/signInFragment2" />
-        <action
-            android:id="@+id/action_initializingFragment_to_settingsFragment"
-            app:destination="@id/settingsFragment"
-            app:popUpTo="@id/settingsFragment"
-            app:popUpToInclusive="true" />
-    </fragment>
+
     <fragment
         android:id="@+id/vkSettingsFragment"
         android:name="com.a1danz.feature_settings.presentation.screens.social_media.vk.VkSettingsFragment"
         android:label="VkSettingsFragment" />
+
     <fragment
         android:id="@+id/tgSettingsFragment"
         android:name="com.a1danz.feature_settings.presentation.screens.social_media.tg.TgSettingsFragment"
         android:label="TgSettingsFragment" />
-    <fragment
-        android:id="@id/createPostFragment"
-        android:name="com.a1danz.feature_create_post.presentation.CreatePostFragment"
-        android:label="CreatePostFragment" />
+
     <fragment
         android:id="@+id/postsFeedFragment"
         android:name="com.a1danz.feature_posts_feed.presentation.screens.feed.PostsFeedFragment"
         android:label="PostsFeedFragment" />
+
     <fragment
         android:id="@+id/aboutFragment"
         android:name="com.a1danz.feature_settings.presentation.screens.about.AboutFragment"
