--- a/core/common/src/main/res/values/styles.xml
+++ b/core/common/src/main/res/values/styles.xml
@@ -40,13 +40,16 @@
         <item name="android:textColor">@color/text_input_layout_hint_selector</item>
     </style>
 
-    <style name="AuthMoveBtn" parent="TextAppearance.MaterialComponents.Button">
-        <item name="android:layout_width">wrap_content</item>
+    <style name="AuthMoveBtn" parent="Widget.Material3.Button">
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@android:color/transparent</item>
+        <item name="android:fontFamily">@font/rubik_medium</item>
         <item name="android:textColor">@color/primary</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:paddingTop">15dp</item>
+        <item name="android:paddingBottom">15dp</item>
     </style>
 
     <style name="AuthCheckBox" parent="Widget.AppCompat.CompoundButton.CheckBox">
@@ -58,16 +61,17 @@
         <item name="android:buttonTint">@color/gray</item>
     </style>
 
-    <style name="BtnPrimary" parent="TextAppearance.MaterialComponents.Button">
+    <style name="BtnPrimary" parent="Widget.Material3.Button">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:backgroundTint">@color/primary</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:paddingTop">10dp</item>
-        <item name="android:paddingBottom">10dp</item>
+        <item name="cornerRadius">10dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/rubik_medium</item>
+        <item name="android:paddingTop">15dp</item>
+        <item name="android:paddingBottom">15dp</item>
     </style>
 
     <style name="BtnError" parent="BtnPrimary">
@@ -85,6 +89,7 @@
         <item name="android:textSize">28sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">?attr/colorOnBackground</item>
+        <item name="android:textAlignment">center</item>
     </style>
 
     <style name="AuthDescription" parent="TextView.Medium">
