--- a/feature/authorization/src/main/res/layout/fragment_signup.xml
+++ b/feature/authorization/src/main/res/layout/fragment_signup.xml
@@ -1,134 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginHorizontal="16dp"
+    android:gravity="center"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/tv_its_posting"
+        style="@style/AuthHeader" />
+
+    <TextView
+        android:id="@+id/tv_type_data"
+        style="@style/AuthDescription"
+        android:layout_marginTop="-10dp"
+        android:layout_marginBottom="10dp" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_name"
+        style="@style/AuthInput"
+        android:layout_marginBottom="5dp"
+        android:hint="@string/your_name"
+        app:placeholderText="@string/name_placeholder">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_name"
+            style="@style/AuthEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textEmailAddress" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_email"
+        style="@style/AuthInput"
+        android:layout_marginBottom="5dp"
+        android:hint="@string/email"
+        app:placeholderText="@string/email_placeholder">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_email"
+
+            style="@style/AuthEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textEmailAddress" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_password"
+        style="@style/AuthInput"
+        android:layout_marginBottom="5dp"
+        android:hint="@string/password">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_password"
+
+            style="@style/AuthEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPassword" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_repeat_password"
+        style="@style/AuthInput"
+        android:hint="@string/repeat_password">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_repeat_password"
+            style="@style/AuthEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPassword" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tv_error"
+        style="@style/AuthErrorText"
+        android:layout_width="match_parent"
+        android:paddingTop="10dp"
+        android:text="@string/input_is_invalid"
+        android:visibility="gone" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_signup"
+        style="@style/BtnPrimary"
+        android:layout_marginTop="5dp"
+        android:text="@string/register" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:orientation="vertical"
         android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        >
-        <TextView
-            android:id="@+id/tv_its_posting"
-
-            style="@style/AuthHeader" />
-
-        <TextView
-            android:id="@+id/tv_type_data"
-
-            style="@style/AuthDescription"
-            android:layout_marginTop="-10dp"
-            android:layout_marginBottom="10dp"
-            />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_layout_name"
-
-            style="@style/AuthInput"
-            android:hint="@string/your_name"
-            app:placeholderText="Имя"
-            android:layout_marginBottom="5dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/input_name"
-
-                style="@style/AuthEditText"
-                android:inputType="textEmailAddress"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_layout_email"
-
-            style="@style/AuthInput"
-            android:hint="@string/email"
-            app:placeholderText="example@example.com"
-            android:layout_marginBottom="5dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/input_email"
-
-                style="@style/AuthEditText"
-                android:inputType="textEmailAddress"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_layout_password"
-
-            style="@style/AuthInput"
-            android:hint="@string/password">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/input_password"
-
-                android:inputType="textPassword"
-                style="@style/AuthEditText"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_layout_repeat_password"
-
-            style="@style/AuthInput"
-            android:hint="@string/repeat_password">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/input_repeat_password"
-
-                android:inputType="textPassword"
-                style="@style/AuthEditText"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:id="@+id/tv_error"
-            style="@style/AuthErrorText"
-
-            android:visibility="gone"
-            android:text="Данные введены некорректно"
-            android:layout_width="match_parent"
-            android:paddingTop="10dp"
-            />
+        android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn_signup"
-
-            style="@style/BtnPrimary"
-            android:text="@string/register"
-            android:layout_marginTop="5dp"
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
-
-            <Button
-                android:id="@+id/btn_move_to_register"
-
-
-                style="@style/AuthMoveBtn"
-                android:text="Есть аккаунт?"
-                />
-        </LinearLayout>
+            android:id="@+id/btn_move_to_sign_in"
+            style="@style/AuthMoveBtn"
+            android:text="@string/already_have_account" />
     </LinearLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
